<resources>
    <string name="app_name">MONIT</string>
    <string name="swipe_down_to_refresh">Data on screen is automatically updated every 10 seconds. If you want to refresh the screen manually, swipe down from the top.</string>
    <string name="toast_sent_new_password_email">The link to change your password has been sent by email. Please check your inbox.</string>
    <string name="toast_sent_an_authentication_email">Verification email has been resent, please check your email.</string>
    <string name="toast_failed_to_send_an_email">Failed to send a verification email. Please retry in a minute.</string>
    <string name="toast_invalid_user_info">No account matches your input. Please check your account and try again.</string>
    <string name="toast_invalid_user_session">Account Settings have been changed. Please sign in again.</string>
    <string name="toast_change_baby_info_succeeded">Baby information has been changed successfully.</string>
    <string name="toast_change_baby_info_failed">Failed to change baby information. Please try again.</string>
    <string name="toast_change_device_name_succeeded">Device name has been changed.</string>
    <string name="toast_change_device_name_failed">Failed to change device name. Please try again.</string>
    <string name="toast_change_password_succeeded">Password has been changed.</string>
    <string name="toast_change_password_failed">Failed to change password. Please try it again.</string>
    <string name="toast_change_nickname_succeeded">Nickname has been changed.</string>
    <string name="toast_change_same_nickname">Nickname you entered is the same as before. Please make any change.</string>
    <string name="toast_change_nickname_failed">Failed to change nickname. Please try it again.</string>
    <string name="toast_invite_group_member_succeeded">A new member is invited.</string>
    <string name="toast_invite_group_member_failed">Failed to invite a new member.</string>
    <string name="toast_invite_same_group_member">You can not invite yourself.</string>
    <string name="toast_delete_group_member_succeeded">A member is deleted.</string>
    <string name="toast_delete_group_member_failed">Failed to remove a member. Please check the account ID.</string>
    <string name="toast_leave_group_succeeded">Leaving the group has been succeeded.</string>
    <string name="toast_leave_group_failed">Leaving the group has been failed. Please try again later.</string>
    <string name="toast_setting_humidity_succeeded">Humidity range setting has been changed.</string>
    <string name="toast_setting_humidity_failed">Failed to change humidity range setting. Please try again later.</string>
    <string name="toast_setting_temperature_succeeded">Temperature range setting has been changed.</string>
    <string name="toast_setting_temperature_failed">Failed to change temperature range setting. Please try again later.</string>
    <string name="toast_setting_ledontime_succeeded">LED indicator turning-on time setting has been changed.</string>
    <string name="toast_setting_ledontime_failed">Failed to change LED indicator turning-on time setting. Please try again later.</string>
    <string name="dialog_contents_update_available_beta">New update is available. If you click the Update button, setup file will be downloaded automatically. Then, please open the file and conduct the updating. </string>
    <string name="dialog_contents_update_available">New version is available now. Please update your application.</string>
    <string name="dialog_contents_finish_applcation">Do you want to close the app?</string>
    <string name="dialog_contents_invalid_signin_input">Invalid login information, Please enter valid information.</string>
    <string name="dialog_contents_invalid_signin_return">Invalid account ID and password. Please enter correct information.</string>
    <string name="dialog_contents_err_communication_with_server">Connection error with the server. Please try again.(%1$s)</string>
    <string name="dialog_contents_input_invitee_short_id">Please enter the membership code for invitation(6-digit)</string>
    <string name="dialog_contents_sign_out_confirm">Do you want to sign out?</string>
    <string name="dialog_contents_sign_out_confirm_description">If you sign out, you will be disconnected from your devices and cannot receive shared information. Are you sure to proceed?</string>
    <string name="dialog_contents_leave_confirm">Do you want to delete your account?</string>
    <string name="dialog_contents_leave_confirm_description">If you delete your account, current sharing groups are removed and cannot share your device status. Once the account is deleted, it is hard to initialize settings of the device connected. Please make sure to finish all the initializing process before leave. Sign-in again with the same email account will be possible after two weeks from deletion. Do you want to proceed?</string>
    <string name="dialog_contents_group_leave_confirm">Do you want to leave the group owned by %1$s(%2$s)?</string>
    <string name="dialog_contents_need_internet_connection">Internet network is needed to connect to Diaper Sensor.</string>
    <string name="dialog_contents_scanning">Searching for the device now.\nOne moment please.</string>
    <string name="dialog_contents_connecting">Connecting the device now.\nOne moment please.</string>
    <string name="dialog_contents_hub_ap_connecting">Setting the Internet connection on the hub.\nOne moment please.</string>
    <string name="dialog_contents_failed_connection">Connection to the device failed.\nPlease check blue light is flashing, and try again later.</string>
    <string name="dialog_contents_hub_ap_connection_failed">Setting the Internet connection failed.\nPlease check the information of the wireless network and try again.</string>
    <string name="dialog_contents_not_detected_monit">Cannot find the diaper sensor nearby.\nPlease try again after following steps.\n1. Turn the senson off and on.\n2. The sensor LED blinks blue.\n3. Select Try again button below.</string>
    <string name="dialog_contents_not_detected_hub">Cannot find Hub nearby.\nPlease try again after following steps.\n1. Remove the sensor from the hub and put it into the hub again.\n2. The hub LED is kept in yellow for 3 seconds.\n3. Select Try again button below.</string>
    <string name="dialog_contents_not_detected_all">Cannot find devices nearby.\nPlease check blue light is flashing and try again later.</string>
    <string name="dialog_contents_ask_for_connectint_hub">Do you want to connect to the Hub additionally?</string>
    <string name="dialog_contents_skip_wifi_setting">Without wireless network setting, you cannot receive real-time information when outside. If you\'d like to do wireless network setting later, go to Hub setting then.</string>
    <string name="dialog_contents_remove_device">Delete the connected device. If this device is deleted, other devices in the same group will be deleted as well. Are you sure to continue?</string>
    <string name="dialog_contents_initialize_device">Initialize the device. After initialization is completed, the device will be disconnected and the data of the device will be removed from your phone. If you would like to connect devices, register again.</string>
    <string name="dialog_contents_finding_device">To find the device, blue LED light flashes for 5 seconds.</string>
    <string name="signin_email">Email</string>
    <string name="signin_password">Password</string>
    <string name="signin_forgot_password">Forgot\npassword</string>
    <string name="signin_toast_warning_for_input_type">Alphabets, numbers and special characters are only available.</string>
    <string name="signin_failed">Sign in failed</string>
    <string name="title_userinfo">User profile</string>
    <string name="title_diary">Diary</string>
    <string name="account_gender">Gender</string>
    <string name="account_baby_name">Nickname</string>
    <string name="account_hint_baby_name">Up to 24 Characters</string>
    <string name="account_baby_sex">Gender</string>
    <string name="account_baby_birthday">Birthday</string>
    <string name="account_email">Email</string>
    <string name="account_hint_email">E-mail address</string>
    <string name="account_warning_email">Invalid e-mail address.</string>
    <string name="account_birthday">Date of birth</string>
    <string name="account_hint_birthday">Select here to set birthday</string>
    <string name="account_warning_birthday">Enter date of birth</string>
    <string name="account_password">Password</string>
    <string name="account_hint_password">8-64 characters\n(alphabets, numbers, AND special characters)</string>
    <string name="account_warning_password">8-64 characters\n(alphabets, numbers, AND special characters)</string>
    <string name="account_nickname">Nickname</string>
    <string name="account_warning_nickname">Enter 1-12 characters</string>
    <string name="account_warning_gender">Please select gender</string>
    <string name="account_warning_code">Please select one of the options above.</string>
    <string name="account_warning_agreement">Please agree to the policy.</string>
    <string name="signup_step1_title">Create Monit Account</string>
    <string name="signup_step1_detail">Monit account is necessary for using Monit service.\nFill out boxes below and select the button on the top.</string>
    <string name="signup_step3_title">Extra caregiver information</string>
    <string name="signup_step3_detail">Please enter the information of the guardian who created the account and complete the registration.\nThe information you input will be used for product improvement through statistics and analysis.</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="sex_baby_boy">Boy</string>
    <string name="sex_baby_girl">Girl</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="unit_temperature_celsius">℃</string>
    <string name="unit_temperature_fahrenheit">℉</string>
    <string name="device_environment_temperature_unit">Temperature Scale</string>
    <string name="group_title_shared_description">You can be invited into a group and receive the device status of the group leader.</string>
    <string name="legal_agreement">Policy</string>
    <string name="group_title_shared_list">List of shared group</string>
    <string name="group_shared_group_list_empty">No shared groups.</string>
    <string name="agreement_title">Accept terms</string>
    <string name="agreement_description_gdpr">To use the Monit service, you need to agree to the terms and conditions by selecting checkbox. You can see the terms and conditions by selecting show button.\nEU (European Union) Citizens are applicable to General Data Protection Regulation (GDPR).\n(*) is a required agreement.</string>
    <string name="agreement_eu_citizen">EU Citizen</string>
    <string name="account_baby_eating">Feeding</string>
    <string name="account_warning_eating">Please choose the type of feeding.</string>
    <string name="setting_temperature_range">Temperature range</string>
    <string name="setting_humidity_range">Humidity range</string>
    <string name="setting_hint_range">Please set the range</string>
    <string name="setting_warning_range">Please set the range</string>
    <string name="setting_room_name">Room name</string>
    <string name="setting_warning_dialog_room_name">Input baby\'s room name</string>
    <string name="setting_baby_name_hint">Who uses this diaper sensor?</string>
    <string name="setting_room_name_hint">Where is this hub placed?</string>
    <string name="setting_account_name_hint">Who cares a baby?</string>
    <string name="account_password_description">Your password must be a combination of 8 to 64 single-byte upper letters, lower letters, numbers and special characters.</string>
</resources>