<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:validation="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDividerPrimaryLight" />

    <goodmonit.monit.com.kao.widget.ValidationEditText
        android:id="@+id/vet_input_hub_info_roomname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        validation:textTitle="@string/setting_room_name"
        validation:textHint="@string/setting_room_name_hint"
        validation:textWarning="@string/setting_warning_dialog_room_name"/>

    <goodmonit.monit.com.kao.widget.ValidationRadio
        android:id="@+id/vr_input_hub_info_temperature_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        validation:textTitle="@string/device_environment_temperature_unit"
        validation:textWarning="@string/account_warning_gender"
        validation:textItem1="@string/unit_temperature_celsius"
        validation:textItem2="@string/unit_temperature_fahrenheit"
        validation:showUnderline="true"/>

    <goodmonit.monit.com.kao.widget.ValidationRange
        android:id="@+id/vr_input_hub_info_temperature_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        validation:textTitle="@string/setting_temperature_range"
        validation:textWarning="@string/setting_warning_range"
        validation:textHint="@string/setting_hint_range"
        validation:showUnderline="false"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorDividerPrimaryLight" />

    <goodmonit.monit.com.kao.widget.ValidationRange
        android:id="@+id/vr_input_hub_info_humidity_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        validation:textTitle="@string/setting_humidity_range"
        validation:textWarning="@string/setting_warning_range"
        validation:textHint="@string/setting_hint_range"
        validation:showUnderline="false"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDividerPrimaryLight" />

</LinearLayout>