<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:validation="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <goodmonit.monit.com.kao.widget.ValidationEditText
                    android:id="@+id/vet_activity_forgot_password_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    validation:textTitle="@string/account_email"
                    validation:textWarning="@string/account_warning_email"
                    validation:textHint="@string/account_hint_email"
                    validation:showUnderline="false"/>

                <goodmonit.monit.com.kao.widget.ValidationBirthdayYYMMDD
                    android:id="@+id/vtv_activity_forgot_password_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    validation:textTitle="@string/account_birthday"
                    validation:textWarning="@string/account_warning_birthday"
                    validation:textContents="@string/account_hint_birthday"
                    android:visibility="gone"/>

                <goodmonit.monit.com.kao.widget.ValidationRadio
                    android:id="@+id/vr_activity_forgot_password_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    validation:textTitle="@string/account_gender"
                    validation:textWarning="@string/account_warning_gender"
                    validation:textItem1="@string/gender_male"
                    validation:textItem2="@string/gender_female"
                    validation:showUnderline="false"
                    android:visibility="gone"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_divider_signup" />
            </LinearLayout>

    </LinearLayout>
    <include layout="@layout/widget_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>